@@ -1,5 +1,9 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.343 2005/10/06 21:00:03 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.344 2005/10/07 14:45:42 rocket Exp $
+
+  07 Oct 2005; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py:
+  Cleanup stage directories properly for tar installs
 
   06 Oct 2005; Eric Edgar <rocket@gentoo.org> modules/tinderbox_target.py:
   Tinderbox no longer cleans /tmp/*
